@startuml Flight_Booking_System_Conceptual_ERD

' ============================================
' CONCEPTUAL ERD - Flight Booking System
' ============================================

skinparam linetype polyline
skinparam nodesep 80
skinparam ranksep 100

' ============================================
' GEOGRAPHIC DOMAIN
' ============================================

class Country {
  Country_ID
  Country_Name
}

class State_Province {
  State_ID
  State_Name
}

class City {
  City_ID
  City_Name
}

class Zip_Master {
  Zipcode
}

class Airport {
  Airport_ID
  Airport_Name
}

Country "1" -- "0..*" State_Province : contains
State_Province "1" -- "0..*" City : contains
City "1" -- "0..*" Zip_Master : has
Zip_Master "1" -- "0..*" Airport : locates

' ============================================
' AIRCRAFT CONFIGURATION DOMAIN
' ============================================

class Aircraft_Model {
  Model_ID
  Model_Name
  Manufacturer
}

class Travel_Class {
  Class_ID
  Class_Name
}

class Aircraft_Configuration {
  Model_ID
  Row_Number
  Seats_In_Row
}

Aircraft_Model "1" -- "0..*" Aircraft_Configuration : configured
Travel_Class "1" -- "0..*" Aircraft_Configuration : defines

' ============================================
' FLIGHT OPERATIONS DOMAIN
' ============================================

class Flight_Route {
  Route_ID
  Base_Duration
}

class Flight_Service {
  Service_ID
  Service_Name
}

class Flight_Instance {
  Instance_ID
  Departure_Time
  Arrival_Time
  Flight_Status
  Price_Multiplier
}

Airport "1" -- "0..*" Flight_Route : origin
Airport "1" -- "0..*" Flight_Route : destination
Flight_Route "1" -- "0..*" Flight_Instance : operates
Aircraft_Model "1" -- "0..*" Flight_Instance : assigned

' ============================================
' PRICING & SERVICES (M:N)
' ============================================

Flight_Route "0..*" -- "0..*" Travel_Class : priced
Flight_Route "0..*" -- "0..*" Travel_Class : offers services
Flight_Service "1" -- "0..*" Flight_Route : available

' ============================================
' USER & PASSENGER DOMAIN
' ============================================

class App_User {
  User_ID
  Email
  Password_Hash
  Phone_Number
  Created_At
}

class Passenger {
  Passenger_ID
  Title
  First_Name
  Last_Name
  Gender
  Date_Of_Birth
  Passport_Num
}

App_User "1" -- "0..1" Passenger : has profile
Passenger "0..1" -- "0..*" Passenger : guardian for
App_User "0..*" -- "0..*" App_User : family

' ============================================
' BOOKING & RESERVATION DOMAIN
' ============================================

class Booking {
  + Booking_ID [PK]
class Booking {
  Booking_ID
  Booking_Date
  Booking_Status
  Contact_Email
  Emergency_Phone
}

class Payment {
  Payment_ID
  Amount_Paid
  Payment_Date
  Payment_Method
}

class Cancellation_Log {
  Log_ID
  Cancel_Date
  Reason
}

App_User "1" -- "0..*" Booking : makes
Booking "1" -- "1" Payment : paid via
Booking "1" -- "0..1" Cancellation_Log : may cancel

' ============================================
' CORE M:N RELATIONSHIPS
' ============================================

Booking "0..*" -- "0..*" Passenger : includes
Passenger "0..*" -- "0..*" Flight_Instance : travels

@enduml
